# smart-debt-recovery-systems

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  conanfile.txt  docker-compose.yml
api-gateway/: CMakeLists.txt
api-gateway/include/middleware/: Middleware.h
api-gateway/include/registry/: ServiceRegistry.h
api-gateway/src/: main.cpp
api-gateway/src/middleware/: Middleware.cpp
api-gateway/src/registry/: ServiceRegistry.cpp
borrower-service/: CMakeLists.txt
borrower-service/include/interfaces/: IBorrowerRepository.h
borrower-service/include/models/: Borrower.h  LoanAccount.h  PaymentHistory.h
borrower-service/include/repositories/: BorrowerRepository.h  LoanAccountRepository.h  PaymentHistoryRepository.h
borrower-service/include/services/: PaymentCheckerImpl.h
borrower-service/src/: main.cpp
borrower-service/src/models/: Borrower.cpp  LoanAccount.cpp  PaymentHistory.cpp
borrower-service/src/repositories/: BorrowerRepository.cpp  LoanAccountRepository.cpp  PaymentHistoryRepository.cpp
borrower-service/src/services/: PaymentCheckerImpl.cpp
common/: CMakeLists.txt
common/include/database/: DatabaseManager.h
common/include/exceptions/: CommunicationException.h  DatabaseException.h  ValidationException.h
common/include/models/: Money.h  Response.h
common/include/utils/: Config.h  Constants.h  Logger.h
common/src/exceptions/: CommunicationException.cpp  DatabaseException.cpp  ValidationException.cpp
common/src/models/: Money.cpp
common/src/utils/: Config.cpp  Logger.cpp
communication-service/: CMakeLists.txt
communication-service/include/channels/: CommunicationChannel.h  EmailChannel.h  SMSChannel.h  VoiceCallChannel.h
communication-service/include/interfaces/: ICommunicationService.h
communication-service/include/managers/: CommunicationManager.h
communication-service/include/models/: CommunicationLog.h
communication-service/include/repositories/: CommunicationLogRepository.h
communication-service/src/: main.cpp
communication-service/src/channels/: EmailChannel.cpp  SMSChannel.cpp  VoiceCallChannel.cpp
communication-service/src/managers/: CommunicationManager.cpp
communication-service/src/models/: CommunicationLog.cpp
communication-service/src/repositories/: CommunicationLogRepository.cpp
communication-service/tests/: test_communication.cpp
database/: schema.sql
postman/: README.md  SDRS_API_Collection.postman_collection.json
recovery-strategy-service/: CMakeLists.txt
recovery-strategy-service/include/interfaces/: IPaymentChecker.h
recovery-strategy-service/include/managers/: StrategyManager.h
recovery-strategy-service/include/strategies/: AutomatedReminderStrategy.h  LegalActionStrategy.h  RecoveryStrategy.h  SettlementOfferStrategy.h
recovery-strategy-service/src/: main.cpp
recovery-strategy-service/src/managers/: StrategyManager.cpp
recovery-strategy-service/src/strategies/: AutomatedReminderStrategy.cpp  LegalActionStrategy.cpp  RecoveryStrategy.cpp  SettlementOfferStrategy.cpp
risk-assessment-service/: CMakeLists.txt
risk-assessment-service/include/algorithms/: KMeansClustering.h  RandomForest.h
risk-assessment-service/include/models/: RiskScorer.h
risk-assessment-service/include/repositories/: RiskAssessmentRepository.h
risk-assessment-service/src/: main.cpp
risk-assessment-service/src/algorithms/: KMeansClustering.cpp  RandomForest.cpp
risk-assessment-service/src/models/: RiskScorer.cpp
risk-assessment-service/src/repositories/: RiskAssessmentRepository.cpp
scripts/: create_sdrs.sh  demo.sh  demo_user_story.sh  demo_user_story_simple.sh  guideline.sh  run_service.sh  setup_database.sh  start_all_services.sh  stop_all_services.sh  test_borrower.sh  test_risk.sh  test_services.sh
web/: borrowers.html  demo.html  index.html  recovery.html  server.py
web/css/: styles.css
web/js/: api.js
